--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
         </div>
         <div class="info">
           <div class="info__center">
-            <div class="title">Добриво 1 раз в тиждень</div>
+            <div class="title">Добриво: 1 раз в тиждень</div>
             <div class="text">( 1 раз на 2 тижні )</div>
           </div>
 
           <div class="text">Добриво збовтати перед використанням</div>
           <div class="text">Середня позначка ковпачка добрива на 2 літри води</div>
           <div class="info__center">
-            <div class="title">Якщо є вода в горщику то вилити її</div>
+            <div class="title">Якщо є вода в горщику, то вилити її</div>
           </div>
         </div>
       </div>
