add vue ad date logic

--- a/index.html
+++ b/index.html
@@ -5,135 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Duuh Plants</title>
+    <title>Plants Duuuh</title>
   </head>
   <body>
     <section class="section">
       <div class="container">
         <h1>Вазони</h1>
-        <div class="blocks">
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Кухня: Алоказія Кукулата</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (50-100мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1022.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Пільма Арека</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (300мл)</p>
-              <p class="text">Коли жарко пшикати на листя</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1024.JPG" alt="plant" class="block__img" />
-              <img src="./assets/images/IMG_1025.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Фіодендрон</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (150мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1026.JPG" alt="plant" class="block__img" />
-              <img src="./assets/images/IMG_1035.JPG" alt="plant" class="block__img" />
+        <div id="app">
+          <div class="blocks">
+            <div v-for="(plant,idx) in plants" :key="plant.id" class="block">
+              <div class="block__info">
+                <div class="title">{{ plant.name }}</div>
+                <p class="text">{{plant.description}}</p>
+                <div class="subtitle">
+                  Останній полив:
+                  <div v-if="plant.date !== ''" class="block__label">{{dateFormatted(plant.date)}}</div>
+                  <div v-else class="block__label">полий мене</div>
+                </div>
+                <input
+                  v-model="plant.date"
+                  type="date"
+                  name="Date"
+                  class="block__input"
+                  placeholder="Вкажи дату"
+                  @change="updateDate($event,idx)"
+                />
+              </div>
+              <div class="block__images">
+                <img v-for="img in plant.images" :key="img" :src=`assets/images/${img}` :alt="plant.name"
+                class="block__img"/>
+              </div>
             </div>
           </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Фікус</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (50мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1028.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Монстера</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (300мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1029.JPG" alt="plant" class="block__img" />
-              <img src="./assets/images/IMG_1038.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Хоя кері</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (10мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1030.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Епіпремнум</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (100мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1032.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Монстера Моанкі</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (100мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1035.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Фікус</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень (100мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1037.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Епіпремум “новий”</div>
-              <p class="text">Полив: <span>1</span> раз на тиждень міняти воду до корінців (зародишів)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1039.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Папороть</div>
-              <p class="text">Полив:<span>1</span> раз на тиждень (100мл)</p>
-              <p class="text">Коли буде сухіший то <span>2</span> рази</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1036.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Репсаліс</div>
-              <p class="text">Полив:<span>1</span>раз на <span>2-3</span> тижні (100мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1031.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
-          <div class="block">
-            <div class="block__info">
-              <div class="title">Кактус + Ехеверія</div>
-              <p class="text">Полив: <span> 1 </span>раз на <span>2-3</span> тижні (100мл)</p>
-            </div>
-            <div class="block__images">
-              <img src="./assets/images/IMG_1023.JPG" alt="plant" class="block__img" />
-            </div>
-          </div>
+          <div class="btn-wrap"><div class="btn" @click="submit()">Відправити дані</div></div>
         </div>
         <div class="info">
           <div class="info__center">
@@ -150,5 +54,139 @@
       </div>
     </section>
     <footer class="footer"></footer>
+    <script src="./assets/js/index.js"></script>
+
+    <script type="module">
+      import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
+
+      createApp({
+        data() {
+          return {
+            plants: [
+              {
+                id: "p-01",
+                name: "Алоказія Кукулата",
+                description: "Полив: 1 раз на тиждень (50-100мл)",
+                date: "2023-04-07",
+                images: ["IMG_1022.JPG"],
+              },
+              {
+                id: "p-02",
+                name: "Пільма Арека",
+                description: "Полив: 1 раз на тиждень (300мл). Коли жарко пшикати на листя",
+                date: "",
+                images: ["IMG_1024.JPG", "IMG_1025.JPG"],
+              },
+              {
+                id: "p-03",
+                name: "Фіодендрон",
+                description: "Полив: 1 раз на тиждень (150мл)",
+                date: "",
+                images: ["IMG_1026.JPG", "IMG_1027.JPG"],
+              },
+              {
+                id: "p-04",
+                name: "Фікус",
+                description: "Полив: 1 раз на тиждень (50мл)",
+                date: "",
+                images: ["IMG_1028.JPG"],
+              },
+              {
+                id: "p-05",
+                name: "Монстера",
+                description: "Полив: 1 раз на тиждень (300мл)",
+                date: "",
+                images: ["IMG_1029.JPG", "IMG_1038.JPG"],
+              },
+              {
+                id: "p-06",
+                name: "Хоя кері",
+                description: "Полив: 1 раз на тиждень (10мл)",
+                date: "",
+                images: ["IMG_1030.JPG"],
+              },
+              {
+                id: "p-07",
+                name: "Епіпремнум",
+                description: "Полив: 1 раз на тиждень (100мл)",
+                date: "",
+                images: ["IMG_1032.JPG"],
+              },
+              {
+                id: "p-08",
+                name: "Монстера Моанкі",
+                description: "Полив: 1 раз на тиждень (100мл)",
+                date: "",
+                images: ["IMG_1035.JPG"],
+              },
+              {
+                id: "p-09",
+                name: "Фікус",
+                description: "Полив: 1 раз на тиждень (100мл)",
+                date: "",
+                images: ["IMG_1037.JPG"],
+              },
+              {
+                id: "p-10",
+                name: "Епіпремум “новий”",
+                description: "Полив: 1 раз на тиждень міняти воду до корінців (зародишів)",
+                date: "",
+                images: ["IMG_1039.JPG"],
+              },
+              {
+                id: "p-11",
+                name: "Папороть",
+                description: "Полив: 1 раз на тиждень (100мл). Коли буде сухіший то 2 рази",
+                date: "",
+                images: ["IMG_1036.JPG"],
+              },
+              {
+                id: "p-12",
+                name: "Репсаліс",
+                description: "Полив: 1 раз на 2-3 тижні (100мл)",
+                date: "",
+                images: ["IMG_1036.JPG"],
+              },
+              {
+                id: "p-13",
+                name: "Кактус + Ехеверія",
+                description: "Полив: 1 раз на 2-3 тижні (100мл)",
+                date: "",
+                images: ["IMG_1023.JPG"],
+              },
+              {
+                id: "p-14",
+                name: "кротон",
+                description: "Полив: 1 раз на тиждень (50мл).",
+                date: "",
+                images: ["IMG_1034.JPG"],
+              },
+            ],
+          }
+        },
+        created() {
+          this.plants.forEach((plant) => {
+            if (plant.date !== "") {
+              this.dateFormatted(plant.date)
+            }
+          })
+        },
+
+        methods: {
+          updateDate(e, idx) {
+            this.dateFormatted(e.target.value)
+          },
+          dateFormatted(date) {
+            date = moment(date, "YYYY-MM-DD").format("MMM Do YY")
+
+            return date
+          },
+          submit() {
+            console.log(this.plants)
+          },
+        },
+      }).mount("#app")
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   </body>
 </html>
