update plants info

--- a/index.html
+++ b/index.html
@@ -84,13 +84,7 @@
                 date: "",
                 images: ["IMG_1026.JPG", "IMG_1027.JPG"],
               },
-              {
-                id: "p-04",
-                name: "Фікус",
-                description: "Полив: 1 раз на тиждень (50мл)",
-                date: "",
-                images: ["IMG_1028.JPG"],
-              },
+
               {
                 id: "p-05",
                 name: "Монстера",
@@ -145,7 +139,7 @@
                 name: "Репсаліс",
                 description: "Полив: 1 раз на 2-3 тижні (100мл)",
                 date: "",
-                images: ["IMG_1036.JPG"],
+                images: ["IMG_1031.JPG"],
               },
               {
                 id: "p-13",
@@ -156,10 +150,17 @@
               },
               {
                 id: "p-14",
-                name: "кротон",
+                name: "Кротон",
                 description: "Полив: 1 раз на тиждень (50мл).",
                 date: "",
                 images: ["IMG_1034.JPG"],
+              },
+              {
+                id: "p-15",
+                name: "Сансиверія",
+                description: "Полив: 1 раз на 2-3 тижні (100мл)",
+                date: "",
+                images: ["IMG_1033.JPG"],
               },
             ],
           }
